--- a/src/public/css/list.css
+++ b/src/public/css/list.css
@@ -41,7 +41,35 @@
     z-index: 1;
 }
 
-.date-wrapper,
+.date-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.calendar-container {
+    position: relative;
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
+}
+
+.calendar-container img {
+    width: 100%;
+    height: 100%;
+}
+
+.calendar-container input[type="date"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+
 .previous-month-arrow {
     display: flex;
     align-items: center;
@@ -61,8 +89,11 @@
     margin-left: 8px;
 }
 
-.date-wrapper input[type="date"] {
-    display: none;
+.previous-month-arrow a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #6d6d6d;
 }
 
 .attendance-list-table {
