--- a/src/public/css/request.css
+++ b/src/public/css/request.css
@@ -2,23 +2,27 @@
     margin-top: 50px;
 }
 
-.border__list {
+.border__tab {
     border-bottom: 1px solid #000;
     display: flex;
     list-style: none;
     margin-bottom: 50px;
 }
 
-.border__list li:first-child {
+.border__tab li:first-child {
     padding-left: 10%;
 }
 
-.border__list li {
+.border__tab li {
     padding: 15px 70px;
     font-weight: bold;
 }
 
-.border__list a {
+.border__tab a {
     text-decoration: none;
+    color: #6d6d6d;
+}
+
+.border__tab a.active {
     color: #000;
 }
