--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -12,11 +12,6 @@
     border-left: 5px solid #000;
 }
 
-.detail-form__table {
-    width: 100%;
-    border-collapse: collapse;
-    border-radius: 5px;
-}
 
 .detail-form__row {
     display: flex;
@@ -26,7 +21,7 @@
 
 .detail-form__label,
 .detail-form__data {
-    padding: 30px 58px;
+    padding: 20px 58px;
 }
 
 .detail-form__label {
@@ -40,7 +35,8 @@
 .detail-form__data {
     width: 40%;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    gap: 6px;
     background: #fff;
     color: #000;
 }
@@ -49,18 +45,36 @@
 .detail-form__data textarea {
     width: 100px;
     border-radius: 3px;
-    border: 1px solid  #6d6d6d;
+    border: 1px solid #6d6d6d;
     opacity: 0.8;
+    font-weight: 400;
+    text-align: center;
 }
 
 .detail-form__data input[name="name"],
-.detail-form__data input[name="date"] {
+.detail-form__data input[name="date[year]"],
+.detail-form__data input[name="date[day]"] {
     border: none;
-} 
+}
 
-.detail-form__data textarea {
+.data__inner {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.data__inner input,
+.data__inner textarea {
+    width: 100px;
+    border-radius: 3px;
+    border: 1px solid #6d6d6d;
+    opacity: 0.8;
+}
+
+.data__inner textarea {
     width: 400px;
     height: 80px;
+    text-align: left;
 }
 
 .detail-form__button {
@@ -74,4 +88,11 @@
     background: #000;
     color: #FFF;
     padding: 10px 20px;
+}
+
+.error-message {
+    min-height: 20px;
+    color: #ff0000;
+    text-align: left;
+    font-size: 0.9em;
 }
