--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -1,8 +1,7 @@
 .attendance-list {
-    max-width: 1400px;
+    width: 70%;
     margin: 0 auto;
-    padding: 0 20px;
-    box-sizing: border-box;
+    color: #000;
 }
 
 .attendance-list__inner {
@@ -14,11 +13,22 @@
     border-left: 5px solid #000;
 }
 
-
 .detail-form__row {
     display: flex;
+    border: none;
+    border-bottom: 2px solid #E0DFDE;
+    background: 
+    #fff;
+}
+
+.detail-form__group {
     border: 1px solid #E0DFDE;
-    background: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.detail-form__row:last-child {
+    border-bottom: none;
 }
 
 .detail-form__label,
