--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -113,6 +113,12 @@
     font-size: 12px;
 }
 
+.error-message-work{
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+
 
 @media (max-width: 1400px) and (max-width: 1540px) {
 
