--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -25,7 +25,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 20px;
 }
 
 .header__logo {
@@ -53,7 +53,8 @@ body {
     display: flex;
     justify-content: center;
     width: 100%;
-    padding: 5px 15px;
+    padding: 0 15px;
+    margin: 0;
 }
 
 .header-nav__item {
