--- a/src/public/css/list.css
+++ b/src/public/css/list.css
@@ -54,6 +54,11 @@
     margin-right: 8px;
 }
 
+.calendar-date {
+    color: #000;
+    font-weight: bold;
+}
+
 .calendar-container img {
     width: 100%;
     height: 100%;
@@ -104,7 +109,11 @@
 }
 
 .table__row {
-    border-bottom: 1px solid #efe9e9;
+    border-bottom: 2px solid #efe9e9;
+}
+
+.table__row:first-child {
+    border-bottom: 3px solid #efe9e9;
 }
 
 .table__label,
@@ -121,10 +130,6 @@
 }
 
 @media (min-width: 1400px) and (max-width: 1540px) {
-
-    .attendance-list {
-        width: 80%;
-    }
 
     .attendance-list__inner {
         margin: 20px;
