--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -90,6 +90,12 @@
     text-align: center;
 }
 
+.readonly-field-remarks {
+    width: 400px;
+    text-align: left;
+    font-size: 14px;
+}
+
 .data__inner textarea {
     width: 400px;
     height: 80px;
@@ -120,10 +126,12 @@
     font-size: 12px;
 }
 
-.error-message-work{
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
+.form__button-approved {
+    border: 1px solid #7a7979;
+    border-radius: 5px;
+    background: #7a7979;
+    color: #FFF;
+    padding: 10px 20px;
 }
 
 
